Modify ParseUri to validate uris.

Parse uri verifies that if a port is provided, it has a valid value.
We accept empty paths.  We also validate that there is a valid scheme
value is provided if it is found.  These requirements are now validated
via unit test.

Bug: 844521
Change-Id: I4fb28a5bba8e6bea9ac9a0bb2e6b4de21351d892
Reviewed-on: https://chromium-review.googlesource.com/1066949
Commit-Queue: Sean Kau <skau@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560869}
Former-commit-id: ff2bbe73f9d836d6b21cc2fe7e0de06ac08ac0dd